<resources>
    <string name="app_name">Domoum</string>

    <string-array name="items">
        <item>Mes favoris</item>
        <item>Mes annonces sauvegardées</item>
        <item>Se connecter</item>
        <item>S\'inscrire</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dejaInscrit"> Déjà inscrit ? Connectez-vous ! </string>
    <string name="inscrire"> Pas encore inscrit ? Inscrivez-vous !</string>
    <string name="action_settings">Reglages</string>
    <string name="achat">Achat</string>
    <string name="crowdfunding">Crowdfunding</string>
    <string name="location">Location</string>
    <string name="viager">Viager</string>
    <string name="colocation">Colocation</string>
    <string name="Enchere">Enchere</string>
    <string name="autre">Autre</string>
    <string name="Rechercher">Rechercher</string>
    <string name="Où">Où ?</string>
    <string name="Type">Type de bien ?</string>
    <string name="Budget">Budget ?</string>
    <string name="tous">Tout</string>
    <string name="importe">peu importe</string>
    <string name="En_savoir_plus"> En savoir plus </string>
    <string name="retour">retour</string>
    <string name="like">Mes Coups de coeurs</string>
    <string name="fav"> Mes Favoris</string>
    <string-array name="villes">
        <item>Paris</item>
        <item>Marseille</item>
        <item>Lyon</item>
        <item>Toulouse</item>
        <item>Brest</item>
        <item>Caen</item>
        <item>Sochaux</item>
        <item>Evian</item>
        <item>Montargis</item>
        <item>Meudon</item>
        <item>Ris-Orangis</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

