<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jean.test.vue.MainFragment"
    >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <Button
        android:text="@string/achat"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcorner"
        android:id="@+id/btnAchat"
        android:textColor="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/idLogoAccueil"
        app:layout_constraintVertical_bias="0.19"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="120dp" />

    <Button
        android:text="@string/location"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLocation"
        android:background="@drawable/roundcorner"
        android:textColor="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/idLogoAccueil"
        app:layout_constraintVertical_bias="0.19"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4" />

    <Button
        android:text="@string/viager"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnViager"
        android:background="@drawable/roundcorner"
        android:textColor="@color/White"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAchat"
        app:layout_constraintLeft_toLeftOf="@+id/btnAchat"
        app:layout_constraintRight_toRightOf="@+id/btnAchat" />

    <Button
        android:text="@string/colocation"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnColocation"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLocation"
        android:background="@drawable/roundcorner"
        android:textColor="@color/White"
        app:layout_constraintRight_toRightOf="@+id/btnLocation"
        app:layout_constraintLeft_toLeftOf="@+id/btnLocation" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="237dp"
        app:srcCompat="@drawable/logoecriture"
        android:id="@+id/idLogoAccueil"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="206dp"
        app:layout_constraintGuide_percent="0.50121653" />

    <Button
        android:text="@string/Enchere"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcorner"
        android:id="@+id/btnEnchere"
        app:layout_constraintLeft_toLeftOf="@+id/btnViager"
        app:layout_constraintRight_toRightOf="@+id/btnViager"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnViager"
        android:textColor="@color/White" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnCrowdfunding"
        android:background="@drawable/roundcorner"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnColocation"
        app:layout_constraintRight_toRightOf="@+id/btnColocation"
        app:layout_constraintLeft_toLeftOf="@+id/btnColocation"
        android:text="@string/crowdfunding"
        android:textColor="@color/White" />

    <Button
        android:background="@drawable/roundcorner"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnTout"
        app:layout_constraintLeft_toRightOf="@+id/btnEnchere"
        app:layout_constraintRight_toLeftOf="@+id/btnCrowdfunding"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnEnchere"
        android:text="@string/tous"
        android:textColor="@color/White" />
</android.support.constraint.ConstraintLayout>
</FrameLayout>
